
file(GLOB DSSM_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB DSSM_SOURCES "${PROJECT_SOURCE_DIR}/utilities/*.cpp")
add_library(DSSM ${DSSM_HEADERS} ${DSSM_SOURCES})

set_target_properties(DSSM PROPERTIES LINKER_LANGUAGE CXX)
